Update extra-metabox.less to support extra-metabox class in all metaboxes

--- a/includes/extra-metabox/extra-metabox.less
+++ b/includes/extra-metabox/extra-metabox.less
@@ -5,7 +5,7 @@
  * 
  *  
  **********************/
-.postbox .bloc {
+.extra-metabox .bloc {
 	background: #fafafa;
 	border: 1px solid #DFDFDF;
 	margin: 10px 0;
@@ -14,10 +14,10 @@
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
 }
-#poststuff .postbox h2 {
+.extra-metabox h2 {
 	margin-top: 0px;
 }
-.postbox .bloc label {
+.extra-metabox .bloc label {
 	display: inline-block;
 	margin-right: 10px;
 	min-width: 150px;
@@ -25,37 +25,37 @@
 	text-align: right;
 	vertical-align: top;
 }
-.postbox .bloc input[type="text"],
-.postbox .bloc select {
+.extra-metabox .bloc input[type="text"],
+.extra-metabox .bloc select {
 	min-width: 200px;
 }
-.postbox .bloc input[type="number"] {
+.extra-metabox .bloc input[type="number"] {
 	padding: 5px 3px;
 	text-align: right;
 	width: 200px;
 }
-.postbox .bloc input[type="checkbox"],
-.postbox .bloc input[type="radio"] {
+.extra-metabox .bloc input[type="checkbox"],
+.extra-metabox .bloc input[type="radio"] {
 	cursor: pointer;
 	vertical-align: -7px;
 }
-.postbox .mediaInput {
+.extra-metabox .mediaInput {
 	float: left;
 	width: 200px;
 }
-.postbox .bloc textarea {
+.extra-metabox .bloc textarea {
 	min-width: 200px;
 	height: 100px;
 }
-.postbox .bloc h2,
-.postbox h2 {
+.extra-metabox .bloc h2,
+.extra-metabox h2 {
 	font-size: 25px;
 	margin: 0px;
 	margin-bottom: 20px;
 }
 #poststuff .bloc h3, 
 .metabox-holder .bloc h3,
-.postbox .bloc h3 {
+.extra-metabox .bloc h3 {
 	background: transparent;text-shadow: #fff 0 1px 0;
 	cursor: text;
 	-webkit-box-shadow: none;
@@ -66,14 +66,14 @@
 	padding: 0px;
 	padding-left: 20px;
 }
-.postbox .title {
+.extra-metabox .title {
 	color: #000000;
 	font-family: "Bebas", sans-serif;
 	font-size: 28px;
 	font-weight: normal;
 	padding: 5px 5px 3px 5px;
 }
-.postbox textarea.title {
+.extra-metabox textarea.title {
 	line-height: 30px;
 }
 /**********************
@@ -113,7 +113,7 @@
 	border-color: red;
 	color: red;
 }
-.postbox .dodelete {
+.extra-metabox .dodelete {
 	border: 0px none;
 	color: red;
 	display: inline-block;
@@ -168,22 +168,22 @@
  * 
  *  
  **********************/
-.postbox .extra-custom-image {
+.extra-metabox .extra-custom-image {
 	margin-top: 15px;
 	padding-top: 20px;
 	
 }
-.postbox .floater,
-.postbox .image {
+.extra-metabox .floater,
+.extra-metabox .image {
 	float: left;
 }
-.postbox .image {
+.extra-metabox .image {
 	margin-left: 10px;
 }
-.postbox .image img {
+.extra-metabox .image img {
 	display: block;
 }
-.postbox .thumbs {
+.extra-metabox .thumbs {
 	display: block;
 	margin-top: 10px;
 }
@@ -219,7 +219,7 @@
  *  
  **********************/
 /* DELETE LINK */
-.postbox .extra-tabs .dodelete {
+.extra-metabox .extra-tabs .dodelete {
 	display: block;
 	position: absolute;
 	top: 15px;
@@ -231,19 +231,19 @@
 	height: 18px;
 } 
 
-.postbox .extra-tabs .dodelete * {
+.extra-metabox .extra-tabs .dodelete * {
 	pointer-events: none;	
 }
-.postbox .extra-tabs .dodelete .label { 
+.extra-metabox .extra-tabs .dodelete .label { 
 	visibility: hidden;
 }
-.postbox .extra-tabs .dodelete .dashicons {
+.extra-metabox .extra-tabs .dodelete .dashicons {
 	font-size: 25px;
 	vertical-align: -8px;	
 	width: auto;
 	height: auto;
 }
-.postbox .extra-tabs .dodelete:hover .label { 
+.extra-metabox .extra-tabs .dodelete:hover .label { 
 	visibility: visible;
 }
 /* NAV */
@@ -297,7 +297,7 @@
 }
 
 .extra-redirection .extra-checkbox label,
-.postbox .extra-redirection .extra-checkbox label{
+.extra-metabox .extra-redirection .extra-checkbox label{
 	text-align: left;
 }
 
@@ -349,8 +349,8 @@
  **********************/
 .bloc:after,
 .floater:after,
-.postbox .extra-custom-editor-wrapper:after,
-.postbox .extra-custom-image:after,
+.extra-metabox .extra-custom-editor-wrapper:after,
+.extra-metabox .extra-custom-image:after,
 .extra-custom-gallery .thumbs,
 .extra-tab-navigation:after {
     content: ".";
