Always show the welcome box on the admin index (css + php hook)

--- a/setup/admin/css/style.css
+++ b/setup/admin/css/style.css
@@ -48,3 +48,7 @@ body.login #login h1 a {
 #cpt_info_box {
 	display: none;
 }
+body.index-php #screen-meta,
+body.index-php #screen-meta-links {
+	display: none;
+}
