Add new Fields for ExtraMetaBox

--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -342,6 +342,17 @@
 
 /**********************
  *
+ *
+ * SLIDER
+ *
+ *
+ **********************/
+.extra-slider {
+	margin-top: 20px;
+}
+
+/**********************
+ *
  * 
  * EASY CLEARING
  * 
