--- a/modules/_second-title/admin/css/style.css
+++ b/modules/_second-title/admin/css/style.css
@@ -15,10 +15,13 @@
 #_second_title_metabox .hndle {
 	display: none;
 }
-#_second_title_metabox .input-title {
+#_second_title_metabox .extra-text-input{
 	padding: 3px 8px;
 	font-size: 1.5em;
 	line-height: 100%;
 	width: 100%;
 	outline: 0;
+}
+#_second_title_metabox label {
+	display: none;
 }
