--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -154,291 +154,6 @@
 	padding-left: 18px;
 	text-decoration: none;
 	vertical-align: middle;
-} 
-/**********************
- *
- * 
- * EXTRA EDITOR
- * 
- *  
- **********************/
-.extra-custom-editor {
-	margin:15px 6px;
-	width: 100%;
-	position: relative; 
-}
-.extra-custom-editor .wp_themeSkin table.mceLayout  {
-	border:1px solid #DFDFDF;
-}
-.extra-custom-editor textarea {
-	border:0;
-}
-.extra-custom-editor .mceStatusbar a.mceResize {
-	top:-2px;
-}
-.extra-custom-editor .wp-switch-editor {
-	border-bottom: 0px none;
-	position: relative;
-	top: 1px;
-}
-.extra-custom-editor .switch-html {
-	background: #F4F4F4;
-}
-.extra-custom-editor .wp-media-buttons {
-	position: absolute; top: 0; left: 0px;
-} 
-.extra-custom-editor .wp_themeSkin  .mceLayout {
-	width: 100%;
-}
-/**********************
- *
- * 
- * IMAGE & GALLERIES MANAGER
- * 
- *  
- **********************/
-.extra-metabox .extra-custom-image {
-	margin-top: 15px;
-	padding-top: 20px;
-	
-}
-.extra-custom-gallery .floater,
-.extra-custom-gallery .image {
-	cursor: move;
-	float: left;
-}
-.extra-metabox .thumbs {
-	display: block;
-	margin-top: 10px;
-}
-.extra-metabox .image {
-	margin: 0 10px 10px 0;
-	position: relative;
-}
-.extra-metabox .image img {
-	display: block;
-}
-.extra-metabox .extra-gallery-placeholder {
-	background: rgba(0, 0, 0, 0.5);
-	display: block;
-	width: 150px;
-}
-.extra-metabox .image .close {
-	background: rgba(255, 255, 255, 0.2);
-	color: #777777;
-	display: block;
-	line-height: 30px;
-	position: absolute;
-	top: 5px; right: 5px;
-	text-align: center;
-	text-decoration: none;
-	width: 30px;
-	height: 30px;
-}
-.extra-metabox .image .close .dashicons {
-	display: block;
-	font-size: 20px;
-	line-height: 30px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.extra-metabox .image .close:hover {
-	background: rgba(0, 0, 0, 0.5);
-	color: red;
-	display: block;
-}
-/**********************
- *
- * 
- * MAP
- * 
- *  
- **********************/
-.extra-map .map-container {
-	width: 100%;
-	height: 450px;
-}   
-.extra-map .address {
-	display: inline-block;
-	margin: 5px 0;
-	width: 300px;
-	max-width: 80%;
-}
-.extra-map .addressBtn {
-	margin-left: 5px;
-}
-.extra-map .addressMsg {
-	display: inline-block;
-	margin-left: 5px;
-}
-/**********************
- *
- * 
- * TABS
- * 
- *  
- **********************/
-/* DELETE LINK */
-.extra-metabox .extra-tabs .dodelete {
-	display: block;
-	position: absolute;
-	top: 15px;
-	right: 20px;
-	text-align: left;
-	text-transform: uppercase;
-	white-space: nowrap;
-	width: auto;
-	height: 18px;
-} 
-
-.extra-metabox .extra-tabs .dodelete * {
-	pointer-events: none;	
-}
-.extra-metabox .extra-tabs .dodelete .label { 
-	visibility: hidden;
-}
-.extra-metabox .extra-tabs .dodelete .dashicons {
-	font-size: 25px;
-	vertical-align: -8px;	
-	width: auto;
-	height: auto;
-}
-.extra-metabox .extra-tabs .dodelete:hover .label { 
-	visibility: visible;
-}
-/* NAV */
-.extra-tab-navigation {
-	position: relative;
-	z-index: 2;
-}
-.extra-tab-navigation li {
-	float: left;
-	margin: 5px 5px 0 0;
-	list-style: none;
-}
-.extra-tab-navigation li a,
-.extra-tab-navigation li a:focus {
-	background: transparent;
-	border: 1px solid #DFDFDF;
-	color: #c4c4c4;
-	display: block;
-	-webkit-border-radius: 3px 3px 0 0;
-	border-radius: 3px 3px 0 0;
-	outline: none;
-	padding: 10px;
-	position: relative;
-	top: 1px;
-	text-decoration: none;
-}
-.extra-tab-navigation li.ui-state-active a,
-.extra-tab-navigation li.ui-state-active a:focus {
-	border-color: #DFDFDF;
-	background: #fafafa;
-	border-bottom: 1px solid #fafafa;
-	color: #333;
-}
-.extra-tabs .ui-tabs-panel > .bloc {
-	margin-top: 0;
-	-webkit-border-radius: 0 0 3px 3px;
-	border-radius: 0 0 3px 3px;
-}
-
-/**********************
- *
- *
- * REDIRECTION
- *
- *
- **********************/
-.extra-redirection .extra-checkbox .extra-conditional {
-	display: none;
-	margin-left: 50px;
-	max-width: 400px;
-}
-
-.extra-redirection .extra-checkbox label,
-.extra-metabox .extra-redirection .extra-checkbox label{
-	text-align: left;
-}
-
-.extra-redirection .extra-highlight {
-	background-color: rgb(68, 68, 68);
-	color: rgb(255, 255, 255);
-}
-.extra-redirection .extra-checkbox .extra-conditional input[type="text"] {
-	width: 100%;
-	margin-top: 10px;
-}
-
-.extra-redirection .extra-search-choice{
-	margin-bottom: 20px;
-}
-.extra-redirection #extra-search-choice-title {
-	margin-top: 10px;
-	font-weight: bold;
-}
-.extra-redirection #extra-search-choice-url {
-	font-size: 12px;
-	font-style: italic;
-}
-
-
-.extra-search-link {
-	position: relative;
-}
-.extra-search-link .extra-search {
-	display: block;
-	padding-right: 100px;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
-.extra-search-link .extra-search-type {
-	position: absolute;
-	right: 5px;
-	top: 0;
-	line-height: 26px;
-}
-
-/**********************
- *
- *
- * SLIDER & RANGE
- *
- *
- **********************/
-.ui-slider-horizontal {
-	width: 100%;
-	position: relative;
-
-	height: 10px;
-	background-color: #cececf;
-	border-radius: 5px;
-}
-.ui-slider-range {
-	height: 10px;
-	width: 100%;
-	background-color: #3d3c3f;
-	position: absolute;
-}
-
-.ui-slider-handle {
-	height: 12px;
-	width: 12px;
-	background-color: #fff;
-	display: block;
-	position: absolute;
-	margin-left: -6px;
-	border: 2px solid #cececf;
-	border-radius: 6px;
-	top: -3px;
-}
-.ui-slider-handle:hover,
-.ui-slider-handle.ui-state-active{
-	border: 2px solid #3d3c3f;
 }
 
 /**********************
@@ -449,11 +164,7 @@
  *  
  **********************/
 .bloc:after,
-.floater:after,
-.extra-metabox .extra-custom-editor-wrapper:after,
-.extra-metabox .extra-custom-image:after,
-.extra-custom-gallery .thumbs:after,
-.extra-tab-navigation:after {
+.floater:after {
     content: ".";
     display: block;
     height: 0;
