Update to the gallery

--- a/includes/extra-metabox/css/extra-image-gallery.less
+++ b/includes/extra-metabox/css/extra-image-gallery.less
@@ -8,7 +8,6 @@
 .extra-metabox .extra-custom-image {
 	margin-top: 15px;
 	padding-top: 20px;
-
 }
 .extra-custom-gallery .floater,
 .extra-custom-gallery .image {
@@ -27,12 +26,13 @@
 	display: block;
 }
 .extra-metabox .extra-gallery-placeholder {
-	background: rgba(0, 0, 0, 0.5);
+	border: 2px solid #CCCCCC;
+	border: 2px dashed #CCCCCC;
 	display: block;
 	width: 150px;
 }
 .extra-metabox .image .close {
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(255, 255, 255, 0.5);
 	color: #777777;
 	display: block;
 	line-height: 30px;
@@ -54,7 +54,7 @@
 	height: 100%;
 }
 .extra-metabox .image .close:hover {
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.8);
 	color: red;
 	display: block;
 }
