--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -5,7 +5,7 @@
  *
  *
  **********************/
-.postbox-container .extra-metabox-minimal-ui {
+#poststuff .extra-metabox-minimal-ui {
 	background: transparent;
 	border: 0px none;
 	-webkit-box-shadow: none;
