--- a/includes/extra-metabox/css/extra-tabs.less
+++ b/includes/extra-metabox/css/extra-tabs.less
@@ -35,6 +35,7 @@
 }
 /* NAV */
 .extra-tab-navigation {
+	margin: 0;
 	position: relative;
 	z-index: 2;
 }
@@ -45,7 +46,7 @@
 }
 .extra-tab-navigation li a,
 .extra-tab-navigation li a:focus {
-	background: transparent;
+	background: #ffffff;
 	border: 1px solid #DFDFDF;
 	color: #c4c4c4;
 	display: block;
@@ -69,7 +70,10 @@
 	-webkit-border-radius: 0 0 3px 3px;
 	border-radius: 0 0 3px 3px;
 }
-
+.extra-tabs .extra-tabs-placeholder {
+	background: #DFDFDF;
+	display: block;
+}
 /**********************
  *
  *
