--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -66,7 +66,7 @@
 	float: left;
 	width: 200px;
 }
-.extra-metabox .bloc textarea {
+.extra-metabox textarea {
 	min-width: 250px;
 	height: 100px;
 }
@@ -154,6 +154,32 @@
 	padding-left: 18px;
 	text-decoration: none;
 	vertical-align: middle;
+}
+
+
+/**********************
+ *
+ *
+ * TINYMCE RESIZE
+ *
+ *
+ **********************/
+.post-status-info {
+	width: 100%;
+	border-spacing: 0;
+	border: 1px solid #e5e5e5;
+	border-top: none;
+	background-color: #f7f7f7;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.04);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.04);
+}
+.post-status-info td {
+	font-size: 12px;
+}
+.extra-metabox .content-resize-handle {
+	background: transparent url(@{lessurl}/../img/resize.gif) no-repeat scroll right bottom;
+	width: 12px;
+	cursor: n-resize;
 }
 
 /**********************
