--- a/modules/_second-title/admin/css/style.css
+++ b/modules/_second-title/admin/css/style.css
@@ -23,5 +23,16 @@
 	outline: 0;
 }
 #_second_title_metabox label {
-	display: none;
+	color: #777;
+	text-align: left;
+	font-size: 1.5em;
+}
+#_second_title_metabox textarea {
+	width: 100%;
+	height: 3em;
+	padding: 3px 8px;
+	font-size: 1.5em;
+	line-height: 1.25em;
+	width: 100%;
+	outline: 0;
 }
