--- a/includes/extra-metabox/css/extra-custom-editor.less
+++ b/includes/extra-metabox/css/extra-custom-editor.less
@@ -12,6 +12,10 @@
 	margin: 0;
 	resize: none;
 }
+.extra-custom-editor-wrapper,
+.extra-editor-wrapper {
+	margin: 30px 0;
+}
 /**********************
  *
  *
