Updated to the extra metabox fields

--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -193,6 +193,19 @@
 	color: red;
 }
 
+
+/**********************
+ *
+ *
+ * SEPARATOR
+ *
+ *
+ **********************/
+.extra-metabox hr.separator {
+	clear: both;
+	margin: 30px 0;
+}
+
 /**********************
  *
  * 
