--- a/includes/extra-metabox/css/extra-tabs.less
+++ b/includes/extra-metabox/css/extra-tabs.less
@@ -5,6 +5,9 @@
  *
  *
  **********************/
+.extra-metabox .extra-tabs .wpa_group > .bloc {
+	background: #fcfcfc;
+}
 /* DELETE LINK */
 .extra-metabox .extra-tabs .dodelete {
 	display: block;
@@ -61,8 +64,8 @@
 .extra-tab-navigation li.ui-state-active a,
 .extra-tab-navigation li.ui-state-active a:focus {
 	border-color: #DFDFDF;
-	background: #fafafa;
-	border-bottom: 1px solid #fafafa;
+	background: #fcfcfc;
+	border-bottom: 1px solid #fcfcfc;
 	color: #333;
 }
 .extra-tabs .ui-tabs-panel > .bloc {
