--- a/includes/extra-metabox/css/extra-image-gallery.less
+++ b/includes/extra-metabox/css/extra-image-gallery.less
@@ -59,6 +59,15 @@
 	display: block;
 }
 
+.extra-metabox .image {
+	width: auto;
+	float: left;
+	margin: 20px 20px 0 0;
+}
+.extra-custom-image-sizes {
+	float: left;
+	margin-top: 20px;
+}
 /**********************
  *
  *
