Work in progress Page Builder

--- a/includes/extra-metabox/page-builder/css/extra-admin-modal.less
+++ b/includes/extra-metabox/page-builder/css/extra-admin-modal.less
@@ -55,17 +55,33 @@
 	color: #2ea2cc;
 }
 
-#extra-admin-modal-container .extra-admin-modal-title {
+#extra-admin-modal-container .extra-admin-modal-header {
 	background: #f3f3f3;
 	border-bottom: 1px solid #ccc;
 	height: 50px;
-
-	padding: 0 16px 0 20px;
+}
+#extra-admin-modal-container .extra-admin-modal-title {
+	padding: 0 0 0 20px;
 	font-size: 22px;
-	line-height: 60px;
+	line-height: 50px;
 	margin: 0;
 }
 
 #extra-admin-modal-container .extra-admin-modal-content {
 	padding: 20px;
+}
+
+#extra-admin-modal-container .extra-admin-modal-footer {
+	background: #f3f3f3;
+	border-top: 1px solid #ccc;
+	height: 50px;
+
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+#extra-admin-modal-container .extra-admin-modal-save{
+	margin: 10px
 }
