Work in progress Page Builder part 3 (Image and Custom editor works in admin)

--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -307,8 +307,8 @@
 .extra-page-builder-block {
 	position: relative;
 }
-.extra-page-builder-block.not-selected > .extra-page-builder-block-content,
-.extra-page-builder-block.not-selected:hover > .extra-page-builder-block-content-admin,
+.extra-page-builder-block.not-selected .extra-page-builder-block-content,
+.extra-page-builder-block.not-selected:hover .extra-page-builder-block-content-admin,
 {
 	display: none;
 }
