Work in progress Extra Page Builder. First try for the front. Image and Editor operational.

--- a/includes/extra-metabox/page-builder/blocks/CustomEditor/css/custom-editor.less
+++ b/includes/extra-metabox/page-builder/blocks/CustomEditor/css/custom-editor.less
@@ -16,6 +16,11 @@
 .extra-editor-wrapper {
 	margin: 30px 0 0 0;
 }
+
+.extra-page-builder-block-custom-editor-content {
+	//width: 100%;
+}
+
 /**********************
  *
  *
