Add Resizable blocks. Enhance drag.

--- a/includes/extra-metabox/page-builder/blocks/CustomEditor/css/custom-editor.less
+++ b/includes/extra-metabox/page-builder/blocks/CustomEditor/css/custom-editor.less
@@ -21,7 +21,7 @@
 	//width: 100%;
 }
 
-.extra-page-builder .custom-editor-content {
+.extra-page-builder-block .custom-editor-content {
 	display: none;
 }
 
