--- a/includes/extra-metabox/page-builder/blocks/Image/css/image.less
+++ b/includes/extra-metabox/page-builder/blocks/Image/css/image.less
@@ -1,10 +1,6 @@
 .extra-page-builder-image{
 	background-size: cover;
 	background-position: center;
-	min-height: 197px;
+	height: 100%;
+	min-height: 200px;
  }
-
-.extra-page-builder-image img {
-	max-width: 100%;
-	height: auto;
-}
