--- a/includes/extra-metabox/page-builder/blocks/Map/css/map-admin.less
+++ b/includes/extra-metabox/page-builder/blocks/Map/css/map-admin.less
@@ -7,7 +7,7 @@
  **********************/
 .extra-map .map-container {
 	width: 100%;
-	height: 450px;
+	min-height: 217px;
 }
 .extra-map .address {
 	display: inline-block;
