--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -321,15 +321,15 @@
 	width: 70px;
 	height: 70px;
 }
-.choose-block-button:nth-child(2n+2) {
-	margin-right: 0;
-}
-.choose-block-button:nth-child(3) {
-	margin-bottom: 0;
-}
-.choose-block-button:nth-child(4) {
-	margin-bottom: 0;
-}
+//.choose-block-button:nth-child(2n+2) {
+//	margin-right: 0;
+//}
+//.choose-block-button:nth-child(3) {
+//	margin-bottom: 0;
+//}
+//.choose-block-button:nth-child(4) {
+//	margin-bottom: 0;
+//}
 .choose-block-button .icon-extra-page-builder {
 	display: block;
 	font-size: 32px;
