--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -350,7 +350,24 @@
 	//padding: 10px;
 	padding: 0 10px;
 	height: 100%;
+
+	position: relative;
 }
+
+.ui-draggable-dragging:after {
+	content: '';
+	display: block;
+	background-color: rgb(255, 255, 255);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	opacity: 0.001;
+	z-index: 1000;
+}
+
+
 .extra-page-builder-block.first .extra-page-builder-block-content {
 	padding-left: 0;
 }
@@ -436,6 +453,7 @@
 	width: 100%;
 	display: inline-block;
 	text-align: center;
+	z-index: 3000; // for iframe fix
 }
 .extra-page-builder-block:hover .extra-page-builder-block-content-admin {
 	display: block;
