--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -27,6 +27,9 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+.icon-extra-page-builder-accordion:before {
+	content: "\e60c";
+}
 .icon-extra-page-builder-grip:before {
 	content: "\e60b";
 }
@@ -321,9 +324,9 @@
 	width: 70px;
 	height: 70px;
 }
-//.choose-block-button:nth-child(2n+2) {
-//	margin-right: 0;
-//}
+.choose-block-button:nth-child(4n+4) {
+	margin-right: 0;
+}
 //.choose-block-button:nth-child(3) {
 //	margin-bottom: 0;
 //}
