--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -357,6 +357,20 @@
 	position: relative;
 }
 
+.extra-page-builder-block-content:after {
+	content: '';
+	display: block;
+	background-color: rgb(255, 255, 255);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	opacity: 0.001;
+	//opacity: 1;
+	z-index: 900;
+}
+
 .ui-draggable-dragging:after {
 	content: '';
 	display: block;
@@ -369,7 +383,6 @@
 	opacity: 0.001;
 	z-index: 1000;
 }
-
 
 .extra-page-builder-block.first .extra-page-builder-block-content {
 	padding-left: 0;
@@ -444,6 +457,7 @@
 	height: 100%;
 
 	background-color: rgba(0, 0, 0, 0.45);
+	z-index: 1000;
 }
 .extra-page-builder-block-content-admin-wrapper {
 	position: absolute;
@@ -525,6 +539,7 @@
 	bottom: 0;
 	width: 100%;
 	cursor: ns-resize;
+	z-index: 1000 !important;
 }
 
 .extra-page-builder-block.resizable:hover .ui-resizable-handle.ui-resizable-s{
