Refacto ResizableBlocks. Add Editable properties (true or false) for each blocks.

--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -580,6 +580,18 @@
 
 /*******************
  *
+ * EDITABLE
+ *
+ ******************/
+.extra-page-builder-block-content-admin-wrapper .edit-block {
+	display: none;
+}
+.editable .extra-page-builder-block-content-admin-wrapper .edit-block {
+	display: inline-block;
+}
+
+/*******************
+ *
  * DEBUG
  *
  ******************/
