Add separator block's icon

--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -27,6 +27,9 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+.icon-extra-page-builder-separator:before {
+	content: "\e60d";
+}
 .icon-extra-page-builder-accordion:before {
 	content: "\e60c";
 }
