Enhance front for Page Builder

--- a/includes/extra-metabox/page-builder/blocks/Slider/css/slider-front.less
+++ b/includes/extra-metabox/page-builder/blocks/Slider/css/slider-front.less
@@ -39,6 +39,7 @@
 /* SLIDE TRANSITION */
 .extra-slider-slide .wrapper > ul > li {
 	float: left;
+	position: relative;
 }
 .extra-slider-slide .wrapper > ul:after {
 	content: ".";
@@ -51,4 +52,11 @@
 .extra-slider-fade .wrapper > ul > li {
 	position: absolute;
 	top: 0; left: 0;
+}
+
+.extra-slider .legend {
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
 }
