Exra slider block, hidden before processed

--- a/includes/extra-metabox/page-builder/blocks/Slider/css/slider-front.less
+++ b/includes/extra-metabox/page-builder/blocks/Slider/css/slider-front.less
@@ -5,6 +5,10 @@
  ********************/
 .extra-slider {
 	overflow: visible;
+	visibility: hidden;
+}
+.extra-slider.extra-slider-processed {
+	visibility: visible;
 }
 .extra-slider,
 .extra-slider .wrapper {
