Debug title on Map and Accordion. WIP Tabs

--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -27,11 +27,14 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-.icon-extra-page-builder-separator:before {
-	content: "\e60d";
+.icon-extra-page-builder-tabs:before {
+	content: "\e60e";
 }
 .icon-extra-page-builder-accordion:before {
 	content: "\e60c";
+}
+.icon-extra-page-builder-separator:before {
+	content: "\e60d";
 }
 .icon-extra-page-builder-grip:before {
 	content: "\e60b";
