Debug iframeResizer on firefox

--- a/includes/extra-metabox/page-builder/blocks/Map/css/map-front.less
+++ b/includes/extra-metabox/page-builder/blocks/Map/css/map-front.less
@@ -15,6 +15,7 @@
 	box-orient: vertical;
 
 	height: 100%;
+	width: 100%;
 }
 .extra-page-builder-map {
 	-webkit-box-flex: 1;
@@ -23,5 +24,8 @@
 
 	width: 100%;
 	min-height: 60px;
+	//height: 100%;
+}
+.extra-page-builder-map > * {
 	height: 100%;
 }
