--- a/includes/extra-metabox/page-builder/blocks/Map/css/map-front.less
+++ b/includes/extra-metabox/page-builder/blocks/Map/css/map-front.less
@@ -6,26 +6,25 @@
  *
  **********************/
 .extra-page-builder-map-wrapper {
-	display: -webkit-box;
-	display: -moz-box;
-	display: box;
-
-	-webkit-box-orient: vertical;
-	-moz-box-orient: vertical;
-	box-orient: vertical;
+//	display: -webkit-box;
+//	display: -moz-box;
+//	display: box;
+//
+//	-webkit-box-orient: vertical;
+//	-moz-box-orient: vertical;
+//	box-orient: vertical;
 
 	height: 100%;
 	width: 100%;
 }
 .extra-page-builder-map {
-	-webkit-box-flex: 1;
-	-moz-box-flex: 1;
-	box-flex: 1;
+//	-webkit-box-flex: 1;
+//	-moz-box-flex: 1;
+//	box-flex: 1;
 
 	width: 100%;
 	min-height: 60px;
 	//height: 100%;
-}
-.extra-page-builder-map > * {
-	height: 100%;
+
+	position: relative;
 }
