--- a/setup/admin/css/style.less
+++ b/setup/admin/css/style.less
@@ -1,7 +1,7 @@
 ﻿/*********************
  *
  * OTHER
- * 
+ *
  ********************/
 body.login {
 	position: relative;
@@ -10,8 +10,8 @@ body.login #login h1 {
 	margin: 30px 0;
 }
 body.login #login h1 a {
-	background-image: url(../img/extra.png);
-	background-image: none, url(../img/extra.svg);
+	background-image: url(@{lessurl}/../img/extra.png);
+	background-image: none, url(@{lessurl}/../img/extra.svg);
 	background-size: 100% auto;
 	margin: 0 20%;
 	width: auto;
@@ -23,7 +23,7 @@ body.login #login h1 a {
 /*********************
  *
  * WELCOME PANEL
- * 
+ *
  ********************/
 #welcome-panel {
 	overflow: visible;
@@ -40,7 +40,7 @@ body.login #login h1 a {
     visibility: hidden;
 }
 .welcome-panel .welcome-panel-column ul {
-	margin: 20px 0 0 0; 
+	margin: 20px 0 0 0;
 }
 #dashboard-widgets-wrap .empty-container {
 	display: none;
