--- a/includes/extra-metabox/css/extra-image-gallery.less
+++ b/includes/extra-metabox/css/extra-image-gallery.less
@@ -64,6 +64,9 @@
 	float: left;
 	margin: 20px 20px 0 0;
 }
+.extra-metabox .extra-custom-image .image {
+	margin-left: 165px;
+}
 .extra-custom-image-sizes {
 	float: left;
 	margin-top: 20px;
