--- a/includes/extra-metabox/css/extra-metabox.less
+++ b/includes/extra-metabox/css/extra-metabox.less
@@ -203,7 +203,26 @@
 	clear: both;
 	margin: 30px 0;
 }
-
+/**********************
+ *
+ *
+ * FILE
+ *
+ *
+ **********************/
+.extra-custom-file {
+	margin: 20px 0;
+}
+.extra-custom-file .file-input {
+	opacity: 0.3;
+}
+.extra-custom-file .file-input:focus {
+	opacity: 1;
+}
+.extra-custom-file .file-name {
+	display: inline-block;
+	padding: 10px 0 0 163px;
+}
 /**********************
  *
  *
